; ModuleID = '/home/carl/AnghaBench/seafile/common/extr_rpc-service.c_free_repo_obj.c'
source_filename = "/home/carl/AnghaBench/seafile/common/extr_rpc-service.c_free_repo_obj.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @free_repo_obj to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_repo_obj(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %10

6:                                                ; preds = %1
  %7 = load i64, i64* %2, align 8
  %8 = inttoptr i64 %7 to i32*
  %9 = call i32 @g_object_unref(i32* %8)
  br label %10

10:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @g_object_unref(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
